blockml/test/errors/11_report/e107/e107d.dashboard
dashboard: e107d
title: 'sales'
reports:

- title: 'overview'
  model: e107m
  default_filters:
    a.dim1:      
    - '100'
  select:
  - a.dim1

